all: add backup command
